2004-05-25  Laurent Sansonetti  <lrz@gnome.org>

	* data/alexandria/glade/new_book_dialog.glade,
	  lib/alexandria/ui/new_book_dialog.rb:

	User is not able to enter ISBN which contains "-" character(s).

	* TODO:

	Updated (added rating support).

2004-05-24  Laurent Sansonetti  <lrz@gnome.org>

	* data/alexandria/glade/preferences_dialog.glade:

	Fixed the wording (called -> queried), thanks to Dafydd.

	* TODO:

	Added.

2004-05-21  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/ui/main_app.rb:

	Saves and restores sidepane slider position and the last selected
	library.

2004-05-20  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/preferences.rb:

	Added with a single implementation using GConf.
	  
	* lib/alexandria.rb:

	Required preferences.rb and added an URL which leads to the
	RubyForge bug tracker.

	* lib/alexandria/ui/main_app.rb:

	- Saves and restores preferences (window position and size,
	  whether toolbar, statusbar and sidepane are active, and whether
	  the books are viewed as icons or list) ;

	- Implemented the 'report_bug' handler, where the default web
	  browser is started. 

	* data/alexandria/glade/main_app.glade:

	- Embed the sidepane's header in a Gtk::Frame (like Evolution) ;
	- Added a toolbar separator between "Refresh" and "View as Icons|List". 

2004-05-18  Laurent Sansonetti  <lrz@gnome.org>

	* data/alexandria/glade/main_app.glade,
	  lib/alexandria/ui/main_app.rb:

	Added a close button in the sidepane's header.

2004-05-17  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/book.rb:
	
	Fixed encoding problems in the Amazon provider,
	which seems to encode strings in UTF-8 twice (?!). 

	* lib/alexandria.rb:

	Sets $DEBUG if ENV['DEBUG'] is defined.

	* lib/alexandria/ui/new_book_dialog.rb:

	Removed code to handle EINVAL exception, this was
	a workaround for a FreeBSD bug which seems to have
	disappeared.

2004-05-15  Laurent Sansonetti  <lrz@gnome.org>

	* data/alexandria/glade/preferences_dialog.glade:
